--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>德州扑克筹码计算器</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@db/db-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         [v-cloak] { display: none; }
         .btn-action { transition: all 0.15s ease; }
